-environment files for frontend added

--- a/namethatobject-frontend/package.json
+++ b/namethatobject-frontend/package.json
@@ -13,7 +13,8 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "dotenv": "^16.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
