- project deployed! - parts relation added - changes related to deploy are made - every setting changed for production environment

--- a/namethatobject/Dockerfile
+++ b/namethatobject/Dockerfile
@@ -1,11 +1,11 @@
 # Use the official Python image from the Docker Hub
 FROM python:3.13-slim
 
-# Install dependencies required to build mysqlclient
+# Install only the necessary dependencies
 RUN apt-get update && apt-get install -y \
-    default-libmysqlclient-dev \
-    pkg-config \
     gcc \
+    python3-dev \
+    libpq-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Set environment variables
@@ -22,11 +22,22 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy the Django project into the container
 COPY . /app/
 
-# Run collectstatic to prepare static files
-RUN python manage.py collectstatic --noinput
+# Create static directory if it doesn't exist
+RUN mkdir -p /app/static
+
+# Collect static files
+RUN python manage.py collectstatic --noinput --clear
 
 # Expose port 8000
 EXPOSE 8000
 
-# Start Gunicorn server
-CMD ["gunicorn", "--bind", "0.0.0.0:8000", "namethatobject.wsgi:application"]
+# Create a startup script
+RUN echo '#!/bin/bash\n\
+python manage.py makemigrations\n\
+python manage.py migrate\n\
+gunicorn --bind 0.0.0.0:8000 namethatobject.wsgi:application' > /app/start.sh
+
+RUN chmod +x /app/start.sh
+
+# Start using the startup script
+CMD ["/app/start.sh"]
