--- a/namethatobject-frontend/Dockerfile
+++ b/namethatobject-frontend/Dockerfile
@@ -14,6 +14,11 @@ RUN npm run build
 
 # Use Nginx to serve the built frontend
 FROM nginx:alpine
+
+# Copy custom nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy built files from previous stage
 COPY --from=build /app/build /usr/share/nginx/html
 
 # Expose port 80
